--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="container">
         <section class="card">
             <div class="profile-pic">
-                <img src="foto de perfil.png" alt="">
+                <img src="joao.webp" alt="">
             </div>
             <div class="link-sec">
                 <h3>Links</h3>
